Bug 42432 - Calc crashes when removing sheet with new content
Summary: Calc crashes when removing sheet with new content
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-10-31 07:10 UTC by Tomáš Chvátal
Modified: 2011-12-23 13:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomáš Chvátal 2011-10-31 07:10:12 UTC
Steps to reproduce:
Click on last opened sheet (usually number 3) or create new one
Start writing some content into the sheet. Do not press enter and delete the sheet by left clicking on the sheet list at the bottom.

Observe nice crash.

This bug is present in 3.3, 3.4 and current trunk, yet it is not always crashing so try multiple times before you mark it as WORKSFORME.

The trace I got here without debugs installed (not much usefull but at least hint):
#  SIGSEGV (0xb) at pc=0x00007f7d7e03dbcb, pid=26762, tid=140177582380832
#
# JRE version: 6.0_22-b22
# Java VM: OpenJDK 64-Bit Server VM (20.0-b11 mixed mode linux-amd64 compressed oops)
# Derivative: IcedTea6 1.10.3
# Distribution: Dummy Product (x86_64), package suse-1.5-x86_64
# Problematic frame:
# C  [libsclx.so+0x349bcb]  ScPatternAttr::GetNumberFormat(SvNumberFormatter*) const+0x1b
Comment 1 Rainer Bielefeld Retired 2011-10-31 07:39:26 UTC
Confirm selected Version and OS due to report and my WIN results.
Deleted from 3.5 Most Annoying because currently not even confirmed.

I was a little doubtful that nobody should have reported such an old bug, but I can reproduce it with blank new Spreadsheet and parallel installation of MinGW Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  2ba5d12-e8c71c5-41e7bcd-4b83b90)] (daily/MinGW_cross-compilation2011-10-25_00.12.09)" (just first attempt).

Also [Reproducible] with "LibreOffice 3.4.4RC1  - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:401)]"  (just first attempt).

Not a very often needed proceeding, but crash, so confirm "Most Annoying".

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 2 Markus Mohrhard 2011-10-31 13:44:26 UTC
fixed the bug in master but it happens in 3-4 too, will send a patch to the ML for review

http://cgit.freedesktop.org/libreoffice/core/commit/?id=88f91adf266f19659014df22e09ce6c6761fb6f1
Comment 3 Markus Mohrhard 2011-10-31 17:19:57 UTC
the 3-4 will be much more complex, in master it was a one line fix because my sheet storage rework solved the first crash that still happens in 3-4
Comment 4 Björn Michaelsen 2011-12-23 13:26:38 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.