update first ScMarkData before setting cursor (fdo#42432)

our ScMarkData instance might be used to set the cursor which will
result in a crash if the selected sheet has been deleted already