sc/source/ui/view/tabview3.cxx
@@ -1511,7 +1511,6 @@ void ScTabView::SetTabNo( SCTAB nTab, bool bNew, bool bExtendSelection, bool bSa
         //  Fenster findet (wird aus SetCursor gerufen)
         UpdateShow();
         aViewData.ResetOldCursor();
-        SetCursor( aViewData.GetCurX(), aViewData.GetCurY(), true );
 
         SfxBindings& rBindings = aViewData.GetBindings();
         ScMarkData& rMark = aViewData.GetMarkData();
@@ -1548,6 +1547,7 @@ void ScTabView::SetTabNo( SCTAB nTab, bool bNew, bool bExtendSelection, bool bSa
             rBindings.Invalidate( FID_TAB_DESELECTALL );
         }
 
+        SetCursor( aViewData.GetCurX(), aViewData.GetCurY(), true );
         bool bUnoRefDialog = pScMod->IsRefDialogOpen() && pScMod->GetCurRefDlgId() == WID_SIMPLE_REF;
 
         // recalc zoom-dependent values (before TabChanged, before UpdateEditViewPos)
